# ansible-vault-web

./: .dockerignore  .gitignore  Dockerfile  Makefile  PRODUCTION.md  README.md  USAGE.md  docker-compose.yml  pyproject.toml  tatus
.github/workflows/: compose-bake.yml
app/: main.py
app/api/: encryption.py  files.py
app/core/: security.py  vault.py
app/schemas/: encryption.py
frontend/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  config.ts  i18n.tsx  index.css  index.tsx
frontend/src/components/: DiffView.tsx  Editor.tsx  EncryptionForm.tsx  FileTemplates.tsx  FileUpload.tsx  Footer.tsx  Header.tsx  HelpModal.tsx  Icons.tsx  TemplatesMenu.tsx
frontend/src/data/: templates.ts
frontend/src/utils/: diff.ts  highlight.ts
helm/ansible-vault/: Chart.yaml  values.yaml
helm/ansible-vault/templates/: NOTES.txt  _helpers.tpl  backend-deployment.yaml  configmap.yaml  frontend-deployment.yaml  ingress.yaml  services.yaml
k8s/: backend-deployment.yaml  configmap.yaml  frontend-deployment.yaml  ingress.yaml  namespace.yaml  secret.yaml  services.yaml
memory-bank/: activeContext.md  implementation-plan.md  progress.md  style-guide.md  tasks.md
memory-bank/archive/: archive-ansible-vault-web-service.md  archive-docker-connection-fix.md
memory-bank/creative/: creative-api-architecture.md  creative-uiux-design.md  creative-ux-flow.md
scripts/: build.sh  deploy-k8s.sh
